examples/test/testpolicy17315.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17315
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key27: value42
      key6: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value22
          key14: value15
          key35: value45
      podSelector:
        matchLabels:
          key20: value40
